# alkaid

./: .clang-format  .gitmodules  LICENSE  README.md  meson.build  minimal-example.py  pyproject.toml
.github/workflows/: python-publish.yml  sphinx-build.yml  unit-test.yml
docs/: Makefile  alir.md  cmvm.md  conf.py  dais.md  getting_started.md  index.rst  install.md  plugin.md  status.md
src/alkaid/: _compat.py  types.py
src/alkaid/_binary/: __init__.py
src/alkaid/_binary/alir/: ALIRInterpreter.cc  ALIRInterpreter.hh  ALIRInterpreter_dispatch.cc  ALIRInterpreter_load.cc  ALIRInterpreter_load_json.cc  ALIRInterpreter_transpile.cc  alir_gzip.hh  alir_kernels.hh  alir_kif.hh  alir_types.hh  bindings.cc
src/alkaid/_binary/cmvm/: api.cc  api.hh  bindings.cc  bit_decompose.cc  cmvm_core.cc  debug.cc  indexers.cc  indexers.hh  mat_decompose.cc  mat_decompose.hh  scm.cc  scm.hh  state_opr.cc  state_opr.hh  types.hh
src/alkaid/_cli/: __init__.py  convert.py  report.py
src/alkaid/cmvm/: __init__.py
src/alkaid/codegen/hls/: hls_codegen.py  hls_model.py
src/alkaid/codegen/hls/source/: binder_util.hh
src/alkaid/codegen/rtl/: _ternary_codegen.py  _utils.py  fsm_model.py  rtl_model.py
src/alkaid/codegen/rtl/common_source/: binder_util.hh  build_fsm_binder.mk  build_quartus_prj.tcl  build_vivado_prj.tcl  fsm_binder.cc  fsm_wrapper.hh  ioutil.hh  template.sdc  template.xdc
src/alkaid/codegen/rtl/verilog/: __init__.py  comb.py  fsm.py  io_map.py  io_wrapper.py  lookup.py  pipeline.py  ternary.py
src/alkaid/codegen/rtl/verilog/source/: shift_adder.v
src/alkaid/codegen/rtl/vhdl/: comb.py  fsm.py  io_wrapper.py  lookup.py  pipeline.py  ternary.py
src/alkaid/codegen/rtl/vhdl/source/: shift_adder.vhd
src/alkaid/codegen/xls/: xls_codegen.py  xls_model.py
src/alkaid/converter/: __init__.py  _plugin_loader.py  example.py  plugin.py
src/alkaid/converter/builtin/keras/: main.py
src/alkaid/converter/builtin/keras/layers/: __init__.py  _base.py  activation.py  batchnorm.py  conv.py  dense.py  image.py  ops.py  pool.py  preproc.py
src/alkaid/converter/builtin/torch/: main.py
src/alkaid/converter/builtin/torch/layers/: __init__.py  direct.py  functional.py  methods.py  modules.py
src/alkaid/stateful/: __init__.py  fsm.py  ordering.py  pipeline.py
src/alkaid/trace/: __init__.py  affine_interval.py  fixed_variable.py  fixed_variable_array.py  pipeline.py  tracer.py
src/alkaid/trace/ops/: __init__.py  bit_oprs.py  einsum_utils.py  histogram.py  images.py  quantization.py  reduce_utils.py  sorting.py
src/alkaid/trace/passes/: __init__.py  canon.py  null_op.py  order.py  retrace.py  surrogate.py  ternary.py
tests/: conftest.py  test_cmvm.py  test_compat.py  test_fsm_usecases.py  test_keras.py  test_ops.py  test_ops_extend.py  test_plugin.py  test_report.py  test_rtl_utils.py  test_scm.py  test_second_level_plugin.py  test_torch.py
