[build-system]
build-backend = "mesonpy"

requires = [
  "meson-python>=0.13.1",
  "numpy>=2",
  "typing-extensions; python_version<'3.11'",
]

[project]
name = "alkaid"
description = "Distributed Arithmetic for Machine Learning"
readme = "README.md"
keywords = [
  "CMVM",
  "distributed arithmetic",
  "high-level synthesis",
  "HLS Complier",
  "machine learning",
  "RTL Generator",
]

license = { text = "GNU Lesser General Public License v3 (LGPLv3)" }
authors = [ { name = "Chang Sun", email = "chsun@cern.ch" } ]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [ "version" ]
dependencies = [ "numpy>=1.26.4", "quantizers>=1,<2" ]
optional-dependencies.docs = [
  "myst-parser",
  "pyparsing",
  "sphinx",
  "sphinx-rtd-theme",
]
optional-dependencies.tests = [
  "pytest",
  "pytest-cov",
  "pytest-env",
  "pytest-sugar",
  "pytest-xdist",
  "xls-python",
]
urls.repository = "https://github.com/calad0i/alkaid"
scripts.alkaid = "alkaid._cli:main"
entry-points."alir_tracer.plugins".alkaid = "alkaid.converter.example:ExampleALIRTracer"
entry-points."alir_tracer.plugins".keras = "alkaid.converter.builtin.keras.main:KerasALIRTracer"

[tool.meson-python]
limited-api = false

[tool.ruff]
target-version = "py310"

line-length = 130
indent-width = 4

include = [ "src/**/*.py" ]
exclude = [
  "src/alkaid/codegen/hls/source/ac_types",
  "src/alkaid/codegen/hls/source/ap_types",
]

format.indent-style = "space"
format.quote-style = "single"
format.skip-magic-trailing-comma = false
format.docstring-code-line-length = 130
format.docstring-code-format = true
lint.select = [ "E", "F", "F401", "I", "W" ]
lint.ignore = [ "E501", "E731", "E741", "F403", "F405" ]
lint.explicit-preview-rules = true
lint.fixable = [ "ALL" ]
lint.unfixable = [  ]

[tool.pytest.ini_options]
env = [ "DA_DEFAULT_THREADS=1", "JAX_PLATFORMS=cpu", "CUDA_VISIBLE_DEVICES=-1" ]
filterwarnings = [
  "ignore: __array__ implementation doesn't accept a copy keyword:DeprecationWarning",
]

addopts = [
  "--import-mode=importlib",
  "--cov=src/alkaid",
  "--cov-report=xml",
  "--cov-report=html",
]

[tool.coverage.report]
exclude_also = [ 'no cover: start(?s:.)*?no cover: stop', 'raise ValueError' ]
[tool.coverage.run]
omit = [ "*/_version.py", "src/alkaid/_cli/*.py" ]
